# dockfile-reviewer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
dockerfile_security_reviewer/: __init__.py  analyzer.py  cli.py  llm.py  models.py  parser.py  reporting.py  rules.py
samples/: insecure.Dockerfile  secure.Dockerfile
tests/: test_analyzer.py  test_cli.py
