[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dockerfile-security-reviewer"
version = "0.1.0"
description = "Review Dockerfiles for common security and maintainability problems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Seymour" }
]
keywords = ["docker", "security", "cli", "lint", "dockerfile"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]

[project.optional-dependencies]
openai = ["openai>=1.40.0"]

[project.scripts]
dockerfile-reviewer = "dockerfile_security_reviewer.cli:main"

[tool.setuptools]
packages = ["dockerfile_security_reviewer"]

